--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "pixijs es6 module",
   "main": "index.js",
   "scripts": {
-    "build":"webpack",
-    "dev":"webpack-dev-server"
+    "build": "webpack",
+    "dev": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,7 @@
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.16",
     "html-webpack-plugin": "^2.30.1",
     "webpack": "^3.5.6",
     "webpack-dev-server": "^2.8.1"
