--- a/package.json
+++ b/package.json
@@ -27,5 +27,7 @@
     "webpack": "^3.5.6",
     "webpack-dev-server": "^2.8.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "es6-tween": "^3.8.15"
+  }
 }
