--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.6.0",
     "clean-webpack-plugin": "^0.1.16",
+    "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.30.1",
+    "url-loader": "^0.5.9",
     "webpack": "^3.5.6",
-    "webpack-dev-server": "^2.8.1"
+    "webpack-dev-server": "^2.8.1",
+    "webpack-merge": "^4.1.0"
   },
   "dependencies": {
     "es6-tween": "^3.8.15"
